Nov 21, 2012 - chris ---------------------------------------------------
o Removed the HAM_DAM_* flags

Nov 20, 2012 - chris ---------------------------------------------------
o Removed ham_cursor_find_ex; renamed ham_cursor_find to ham_cursor_find_ex

Nov 19, 2012 - chris ---------------------------------------------------
o Removed ham_enable_encryption and the file filters; this function was
    not really used
o Removed ham_enable_compression and the record filters; this function was
    not really used
o Removed ham_get_keycount_per_page; the keycount can still be retrieved
    with ham_get_parameter(... HAM_PARAM_GET_KEYS_PER_PAGE...)
o Removed sorted duplicates; they anyway did not work in combination with
    Transactions. They will be fully implemented at a later stage.
o Removed ham_flush; use ham_env_flush instead
o Renamed HAM_WRITE_THROUGH to HAM_ENABLE_FSYNC

Nov 25, 2012 - chris ---------------------------------------------------
                      release of hamsterdb-2.0.5

Nov 16, 2012 - chris ---------------------------------------------------
o Now linking against libtcmalloc_minimal if it's installed

Nov 15, 2012 - chris ---------------------------------------------------
o Performance improvement: insertion of a new record number no longer modifies
	the header page

Oct 25, 2012 - chris ---------------------------------------------------
o (win32) Now creating file with attribute FILE_ATTRIBUTE_NOT_CONTENT_INDEXED
    (thanks, Jake)

Sep 27, 2012 - chris ---------------------------------------------------
o issue #16: Fixed log file switching for temporary Transactions

Sep 25, 2012 - chris ---------------------------------------------------
o Fixed recovery process for temporary Transactions

Aug 30, 2012 - chris ---------------------------------------------------
o Removed HAM_PARAM_GET_STATISTICS; ham/hamsterdb_stats.h is no longer
    public, and the functions are no longer exported
